--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <h1>Hey there!</h1>
+    <h2>Hey there!</h2>
+    <h3>im Bharath</h3>
+    <p>This is a simple HTML page.</p>
 </body>
 </html>
